Infer a fresh name early (during parsing) for literals used as the receiver for a method call.